objects/ASI_MFM_CAP_Plan_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_CAP_Attach_in_Approval_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Link in Approval Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Validation Statement</fullName>
                </value>
                <value>
                    <fullName>Purchase Reason</fullName>
                </value>
                <value>
                    <fullName>Quotation</fullName>
                </value>
                <value>
                    <fullName>T&amp;E Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_FeedItemId__c</fullName>
        <label>FeedItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_FileId__c</fullName>
        <label>FileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_File_Ext__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_Image_URL__c</fullName>
        <formula>if(
CASE(LOWER( ASI_MFM_CAP_File_Ext__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB120BY90&amp;versionId=&apos; &amp; ASI_MFM_CAP_FileId__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_MFM_CAP_FileId__c, ASI_MFM_CAP_File_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_Preview__c</fullName>
        <formula>IF(ISBLANK(ASI_MFM_CAP_Image_URL__c), ASI_MFM_CAP_File_Name__c, IMAGE(ASI_MFM_CAP_Image_URL__c, ASI_MFM_CAP_File_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>CAPEX Plan Attachments</relationshipLabel>
        <relationshipName>ASI_MFM_CAP_Plan_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ASI MFM CAP Plan Attachment</label>
    <nameField>
        <displayFormat>DOCS-{00000000}</displayFormat>
        <label>Attachment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM CAP Plan Attachments</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_Plan_Attachment</fullName>
        <active>true</active>
        <label>ASI MFM CAP Plan Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TW_Plan_Attachment</fullName>
        <active>true</active>
        <label>ASI MFM CAP TW Plan Attachment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>